Features and Footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       content="hotel in maasin, hotel maasin, maasin hotel"
     />
     <title>Hotel CJ | Welcome</title>
+    <script
+      src="https://kit.fontawesome.com/7218487774.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
@@ -29,6 +33,70 @@
           </ul>
         </div>
       </nav>
+
+      <div id="showcase">
+        <div class="container">
+          <div class="showcase-content">
+            <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+            <p class="lead">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nihil
+              rerum vitae quaerat eveniet, expedita voluptatum? Nobis at ab eos
+              dolorum qui voluptate aut consequuntur neque aliquam tempora!
+              Debitis, iste voluptatum. Itaque repellendus quasi optio vero
+              debitis iusto nam aspernatur.
+            </p>
+            <a class="btn" href="about.html">About Our Hotel</a>
+          </div>
+        </div>
+      </div>
     </header>
+
+    <section id="home-info" class="bg-dark">
+      <div class="info-img"></div>
+
+      <div class="info-content">
+        <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste eum,
+          quo optio assumenda rem laborum in. Hic reprehenderit perferendis in
+          praesentium? Iusto mollitia ducimus suscipit ratione architecto atque
+          amet ad eos! Praesentium sit consequatur tempora. Excepturi eos
+          suscipit placeat repellat!
+        </p>
+        <a href="about.html" class="btn btn-light">Read More</a>
+      </div>
+    </section>
+
+    <section id="features">
+      <div class="box bg-light">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Great Location</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
+          in!
+        </p>
+      </div>
+      <div class="box bg-primary">
+        <i class="fas fa-utensils fa-3x"></i>
+        <h3>Free Meals</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
+          in!
+        </p>
+      </div>
+      <div class="box bg-light">
+        <i class="fas fa-dumbbell fa-3x"></i>
+        <h3>Fitness Room</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
+          in!
+        </p>
+      </div>
+    </section>
+
+    <div class="clr"></div>
+    <footer id="main-footer">
+      <p>Hotel CJ &copy; 2021, All Rights Reserved</p>
+    </footer>
   </body>
 </html>
